--- a/client/templates/views/scs_add.html
+++ b/client/templates/views/scs_add.html
@@ -32,17 +32,17 @@
         
 	    
 		<div class="row clear">
-			<div class="col col-6 mobile-full subChainAddr">
+			<!-- div class="col col-6 mobile-full subChainAddr">
 				<h3>{{i18n 'wallet.scs.newScs.subChain-addr' }}</h3>
 				{{>dapp_addressInput placeholder="0x000000.." name="subChain-addr" autofocus=true class="subChain-addr"}}
-			</div>
+			</div -->
 			
-			<div class="col col-6 mobile-full">
+			<!--div class="col col-6 mobile-full">
                 
 						<h3>{{i18n 'wallet.scs.newScs.dapp'}}</h3>
 						{{> dapp_addressInput placeholder="0x000000.." name="dapp" autofocus=true class="dapp"}}
 
-            </div>
+            </div-->
 			
 			<!--div class="row clear subChain" >
 			<div class="col col-6 mobile-full subChain-Addr">
