--- a/client/templates/views/scs_dashboard.html
+++ b/client/templates/views/scs_dashboard.html
@@ -108,21 +108,21 @@
                 <p>{{i18n "wallet.app.texts.noAccounts.text"}}</p>
             </div>  -->
      <!--   {{/if}}  -->
-<!--
+
         <div class="dapp-clear-fix"></div>
 
 
         {{#if allScsTransactions}}
             <h2>{{i18n 'wallet.scs.transactions.latest'}}</h2>
 			{{> elements_scs_transactions_table limit=5}}
--->       
- <!--    {{> elements_scs_transactions_table limit=5}}  -->
-<!--
+       
+		{{> elements_scs_transactions_table limit=5}}  
+
         {{else}}
 
             <h2>{{i18n 'wallet.transactions.none'}}</h2>
         {{/if}}
--->
+
     </div>
 
 </template>
