--- a/client/templates/views/modals/scsSendTransactionInfo.html
+++ b/client/templates/views/modals/scsSendTransactionInfo.html
@@ -18,13 +18,23 @@
 		</h1>
         <br>
 	<h1>
-        {{dapp_formatBalance amount "0,0.00[000000] UNIT"}}
-        {{#if $neq unit 'mc'}}
-            <br>
-            <small>
-                ({{dapp_formatBalance amount "0,0.00[000000] unit" "mc"}})
-            </small>
-        {{/if}}
+		{{#if $eq type 'isDepositting' }}
+			{{dapp_formatBalance amount "0,0.00[000000] UNIT"}}
+			{{#if $neq unit 'mc'}}
+				<br>
+				<small>
+					({{dapp_formatBalance amount "0,0.00[000000] unit" "mc"}})
+				</small>
+			{{/if}}
+		{{else}}
+			{{dapp_formatBalance amount "0,0.00[000000]"}}{{scCoinUnit}}
+			{{#if $neq unit 'mc'}}
+				<br>
+				<small>
+					({{dapp_formatBalance amount "0,0.00[000000] "}}{{scCoinUnit}})
+				</small>
+			{{/if}}
+		{{/if}}
     </h1>
     <p>
         {{> elements_account_link address=from}}
